2002-12-06  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstBrackets, AstModifiers, AstArguments): Consolidate
	common code into fewer locations.
	* src/ast.cpp:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/expr.cpp:
	* src/java.g:
	* src/modifier.cpp:
	* src/parser.cpp:
	* src/parser.h:
	* src/semantic.h:
	* src/symbol.cpp:
	* src/unparse.cpp: Use modifications to Ast tree.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h: Regenerate.

2002-12-06  Elliott Hughes <enh@acm.org>

	* src/stream.cpp (ReadInput, RereadInput): 
	* src/symbol.h (buffer): Remove dead code pertaining to buffer
	files, whatever they were.

2002-12-06  Chris Dennis  <chris.dennis@invidi.com>

	* src/control.cpp (ProcessBodies): Fix compile error in Windows.

2002-12-05  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstDeclaredType, AstInitializerDeclaration): More
	AST backporting from generics-branch. Also change all Num* methods
	to return unsigned counts, instead of int.
	* src/Makefile.am:
	* src/ast.cpp:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/class.h:
	* src/control.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/init.cpp:
	* src/java.g:
	* src/modifier.cpp:
	* src/parser.cpp:
	* src/parser.h:
	* src/semantic.h:
	* src/spell.h:
	* src/symbol.cpp:
	* src/symbol.h:
	* src/unparse.cpp: Associated back-ports. Also fix all compiler
	warnings.
	* src/Makefile.in:
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h: Regenerate.

2002-12-04  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstType, AstInstanceofExpression, AstClassLiteral):
	Backport abstract syntax tree improvements from generics-branch.
	* src/java.g: Backport grammar improvements from generics-branch,
	now allowing LALR(1) instead of LALR(2) parsing.
	* src/ast.cpp
	* src/body.cpp: